--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,6 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/Contacts/contacts.db
+/Contacts/contacts.db-wal
+/Contacts/contacts.db-shm
